// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WatchRow component should display after hours value 1`] = `
<div
  className="stockRow"
  onClick={[Function]}
>
  <div
    className="sybmol"
  >
    a
  </div>
  <div
    className="value"
  >
    +$15.00
  </div>
</div>
`;

exports[`WatchRow component should display negative value 1`] = `
<div
  className="stockRow"
  onClick={[Function]}
>
  <div
    className="sybmol"
  >
    a
  </div>
  <div
    className="value loss"
  >
    -$10.00
  </div>
</div>
`;

exports[`WatchRow component should display positive value 1`] = `
<div
  className="stockRow"
  onClick={[Function]}
>
  <div
    className="sybmol"
  >
    a
  </div>
  <div
    className="value"
  >
    +$5.00
  </div>
</div>
`;
